--- a/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
@@ -7,16 +7,18 @@
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/EventPlanning.Web.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
     <nav class="navbar-meetup fixed-top d-flex align-items-center justify-content-between">
 
         <div class="d-flex align-items-center">
-            <a class="navbar-brand brand-logo me-4" asp-controller="Home" asp-action="Index">
-                eventplanner
+            <a class="navbar-brand brand-logo me-5" asp-controller="Home" asp-action="Index">
+                Stanza
             </a>
         </div>
 
@@ -54,7 +56,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" asp-controller="Home" asp-action="MyEvents">
+                            <a class="dropdown-item" asp-controller="Event" asp-action="MyEvents">
                                 <i class="bi bi-calendar-check me-2"></i> My Events
                             </a>
                         </li>
